After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 708860 - glib-2.38.0 doesn't build on Solaris 10
glib-2.38.0 doesn't build on Solaris 10
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: build
2.38.x
Other Solaris
: Normal major
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2013-09-26 18:23 UTC by William Orr
Modified: 2013-09-26 19:42 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Detects and uses O_DIRECTORY (1.55 KB, patch)
2013-09-26 18:23 UTC, William Orr
committed Details | Review

Description William Orr 2013-09-26 18:23:33 UTC
Created attachment 255865 [details] [review]
Detects and uses O_DIRECTORY

Broken by https://git.gnome.org/browse/glib/commit/?id=6ec2bb17c393c411a2182e865aa0979165dfbac5

Solaris 10's open doesn't have O_DIRECTORY. This patch detects presence of O_DIRECTORY and uses it if the OS has support for it.
Comment 1 Colin Walters 2013-09-26 19:03:42 UTC
Review of attachment 255865 [details] [review]:

Hm, does it really work to just open() a directory on Solaris without using O_DIRECTORY?  In other words did you actually test this patch?
Comment 2 William Orr 2013-09-26 19:15:11 UTC
On Solaris, open only fails if you try and open a directory O_RDWR or O_WRONLY
Comment 3 William Orr 2013-09-26 19:24:39 UTC
I also tested with the gio-du test, which worked fine.

 [ worr on solaris ] ( tests ) % ./gio-du -h /export/home/worr
/export/home/worr: 120.4 MB (464 dirs, 5406 files)
Comment 4 Colin Walters 2013-09-26 19:28:43 UTC
Great, thanks!  I made a minor adjustment of prefixing the AC_DEFINE value with HAVE_, which is more conventional, and tweaked the commit message.

Thanks for the patch!

https://git.gnome.org/browse/glib/commit/?id=7eb1e5fc5bc5aa6744bd516463ca2d65104c5a4e
Comment 5 William Orr 2013-09-26 19:42:03 UTC
No problem, and thanks for the quick turnaround!